# sigmaos

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  _build.sh  bazel-bin  bazel-out  bazel-src  bazel-testlogs  build.sh  builder.Dockerfile  go.mod  go.sum  make-cpp.sh  make-python.sh  make-rs.sh  make.sh  rs-builder.Dockerfile  start-kernel.sh  stop.sh  test-in-docker.sh  test.sh
api/fs/: BUILD.bazel
api/sigmaos/: BUILD.bazel
api/spprotsrv/: BUILD.bazel
apps/cache/: BUILD.bazel
apps/cache/cachegrp/: BUILD.bazel
apps/cache/cachegrp/clnt/: BUILD.bazel
apps/cache/clnt/: BUILD.bazel
apps/cache/proto/: BUILD.bazel  cache.proto
apps/cache/srv/: BUILD.bazel
apps/epcache/: BUILD.bazel
apps/epcache/clnt/: BUILD.bazel
apps/epcache/proto/: BUILD.bazel  epcache.proto
apps/epcache/srv/: BUILD.bazel
apps/hotel/: BUILD.bazel
apps/hotel/proto/: BUILD.bazel
apps/imgresize/: BUILD.bazel
apps/imgresize/proto/: BUILD.bazel  imgresizesrv.proto
apps/imgresize/rpcclnt/: BUILD.bazel
apps/imgresize/srv/: BUILD.bazel
apps/mr/: BUILD.bazel
apps/mr/chunkreader/: BUILD.bazel
apps/mr/grep/: BUILD.bazel
apps/mr/kvmap/: BUILD.bazel
apps/mr/mr/: BUILD.bazel
apps/mr/scanner/: BUILD.bazel
apps/mr/wc/: BUILD.bazel
apps/socialnetwork/: BUILD.bazel
apps/socialnetwork/proto/: BUILD.bazel
benchmarks/: BUILD.bazel
benchmarks/c-spinner/: BUILD.bazel
benchmarks/loadgen/: BUILD.bazel
benchmarks/netperf/: BUILD.bazel
benchmarks/remote/: BUILD.bazel
benchmarks/spin/: BUILD.bazel
boot/clnt/: BUILD.bazel
cpp/: CMakeLists.txt  update.py
cpp/apps/cache/: BUILD.bazel  CMakeLists.txt  cache.cc  cache.h  clnt.cc  clnt.h  shard.cc  shard.h  srv.cc  srv.h
cpp/apps/cossim/: BUILD.bazel  CMakeLists.txt  srv.cc  srv.h  vec.cc  vec.h
cpp/apps/echo/: BUILD.bazel  CMakeLists.txt  srv.cc  srv.h
cpp/apps/epcache/: BUILD.bazel  CMakeLists.txt  clnt.cc  clnt.h
cpp/apps/spin/: BUILD.bazel  CMakeLists.txt  srv.cc  srv.h
cpp/io/conn/: BUILD.bazel  CMakeLists.txt  conn.cc  conn.h
cpp/io/demux/: BUILD.bazel  CMakeLists.txt  clnt.cc  clnt.h  srv.cc  srv.h
cpp/io/frame/: BUILD.bazel  CMakeLists.txt  frame.cc  frame.h
cpp/io/iovec/: BUILD.bazel  CMakeLists.txt  iovec.cc
cpp/io/net/: BUILD.bazel  CMakeLists.txt  clnt.cc  clnt.h  srv.cc  srv.h
cpp/io/transport/: BUILD.bazel  CMakeLists.txt  call.h  transport.cc  transport.h
cpp/proc/: BUILD.bazel  CMakeLists.txt  proc.cc  proc.h  proc.pb.cc  proc.pb.h  status.h
cpp/proxy/sigmap/: BUILD.bazel  CMakeLists.txt  sigmap.cc  sigmap.h
cpp/python/: CMakeLists.txt  clntlib.cc  clntlib.h
cpp/rpc/: BUILD.bazel  CMakeLists.txt  blob.cc  blob.h  channel.h  clnt.cc  clnt.h  srv.cc  srv.h
cpp/rpc/delegation/: BUILD.bazel  CMakeLists.txt  cache.cc  cache.h
cpp/rpc/proto/: BUILD.bazel  CMakeLists.txt  rpc.pb.cc  rpc.pb.h
cpp/rpc/spchannel/: BUILD.bazel  CMakeLists.txt  spchannel.cc  spchannel.h
cpp/serr/: BUILD.bazel  CMakeLists.txt  serr.cc  serr.h
cpp/shmem/: CMakeLists.txt
cpp/sigmap/: BUILD.bazel  CMakeLists.txt  const.h  sigmap.pb.cc  sigmap.pb.h
cpp/threadpool/: BUILD.bazel  CMakeLists.txt  threadpool.cc  threadpool.h
cpp/user/cached-srv-cpp/: BUILD.bazel  CMakeLists.txt  main.cc
cpp/user/cossim-srv-cpp/: BUILD.bazel  CMakeLists.txt  main.cc
cpp/user/echo-srv-cpp/: BUILD.bazel  CMakeLists.txt  main.cc
cpp/user/hello-world-cpp/: BUILD.bazel  CMakeLists.txt
cpp/user/spawn-latency-cpp/: BUILD.bazel  CMakeLists.txt  main.cc
cpp/user/spin-srv-cpp/: BUILD.bazel  CMakeLists.txt  main.cc
cpp/util/codec/: BUILD.bazel  CMakeLists.txt  codec.cc
cpp/util/common/: BUILD.bazel  CMakeLists.txt  util.cc  util.h
cpp/util/log/: BUILD.bazel  CMakeLists.txt  log.cc  log.h
cpp/util/perf/: BUILD.bazel  CMakeLists.txt  perf.cc  perf.h
ctx/: BUILD.bazel
dcontainer/: BUILD.bazel  dcontainer.go
dcontainer/cgroup/: BUILD.bazel
dialproxy/: BUILD.bazel
dialproxy/clnt/: BUILD.bazel
dialproxy/proto/: BUILD.bazel  dialproxy.proto
dialproxy/srv/: BUILD.bazel
dialproxy/transport/: BUILD.bazel
docker/: BUILD.bazel  bazel.Dockerfile  builder.Dockerfile  cpp-builder.Dockerfile  py-builder.Dockerfile  rs-builder.Dockerfile  target.Dockerfile  target.Dockerfile.dockerignore  tester.Dockerfile
kernel/: BUILD.bazel
kernel/clnt/: BUILD.bazel
kernel/proto/: BUILD.bazel
kernel/srv/: BUILD.bazel
namesrv/: BUILD.bazel
namesrv/fsetcd/: BUILD.bazel  fsetcd.proto
namesrv/fsetcd/proto/: BUILD.bazel  fsetcd.proto
namesrv/leaderetcd/: BUILD.bazel
namesrv/ndclnt/: BUILD.bazel
path/: BUILD.bazel
proc/: BUILD.bazel  env.go  proc.go
proc/kproc/: BUILD.bazel
proc/proto/: BUILD.bazel  proc.proto
rpc/: BUILD.bazel
rpc/clnt/: BUILD.bazel
rpc/clnt/cache/: BUILD.bazel
rpc/clnt/channel/: BUILD.bazel
rpc/clnt/delegation/: BUILD.bazel
rpc/clnt/netconn/: BUILD.bazel
rpc/clnt/opts/: BUILD.bazel
rpc/clnt/sigmap/: BUILD.bazel
rpc/dev/: BUILD.bazel
rpc/dev/clnt/: BUILD.bazel
rpc/dev/srv/: BUILD.bazel
rpc/proto/: BUILD.bazel  rpc.proto
rpc/shardedsvc/clnt/: BUILD.bazel
rpc/srv/: BUILD.bazel
rpc/transport/: BUILD.bazel
scontainer/: BUILD.bazel  python_test.go  scontainer.go
scontainer/python/: install_wheel.py  python.go
scontainer/python/pylock/: environment_markers.go  pylock.go
serr/: BUILD.bazel
sigmaclnt/: BUILD.bazel
sigmaclnt/fidclnt/: BUILD.bazel
sigmaclnt/fsclnt/: BUILD.bazel
sigmaclnt/fsclnt/pathclnt/: BUILD.bazel
sigmaclnt/fslib/: BUILD.bazel
sigmaclnt/fslib/dircache/: BUILD.bazel
sigmaclnt/fslib/dirwatcher/: BUILD.bazel
sigmaclnt/fslib/reader/: BUILD.bazel
sigmaclnt/fslib/writer/: BUILD.bazel
sigmaclnt/procclnt/: BUILD.bazel
sigmap/: BUILD.bazel  named.go  sigmap.proto
sigmap/proto/: BUILD.bazel  sigmap.proto
sigmasrv/: BUILD.bazel
sigmasrv/clntcond/: BUILD.bazel
sigmasrv/cpumon/: BUILD.bazel
sigmasrv/fencefs/: BUILD.bazel
sigmasrv/memfssrv/: BUILD.bazel
sigmasrv/memfssrv/memfs/: BUILD.bazel
sigmasrv/memfssrv/sigmapsrv/: BUILD.bazel
sigmasrv/pipe/: BUILD.bazel
sigmasrv/stats/: BUILD.bazel
test/: BUILD.bazel
(+312 files in other folders)
