# gazelle:go_grpc_compilers @rules_go//proto:go_grpc
# gazelle:go_proto_compilers @rules_go//proto:go_proto
# gazelle:cc_group unit

load("@gazelle//:def.bzl", "gazelle", "gazelle_binary")

gazelle_binary(
    name = "gazelle_bin",
    languages = [
        "@gazelle//language/proto",
        "@gazelle//language/go",
        "@gazelle_cc//language/cc",
    ],
)

gazelle(
    name = "gazelle",
    gazelle = ":gazelle_bin",
)

exports_files(["create-net.sh"])
