module(
    name = "sigmaos",
)

bazel_dep(name = "rules_go", version = "0.57.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "gazelle", version = "0.45.0")
bazel_dep(name = "protobuf", version = "32.1")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
go_deps.gazelle_override(
    directives = [
        "gazelle:proto legacy",
        "gazelle:resolve proto gogoproto/gogoproto.proto @com_github_gogo_protobuf//gogoproto:gogoproto_proto",
        "gazelle:resolve proto google/api/annotations.proto @com_google_googleapis//google/api:annotations_proto",
        "gazelle:resolve proto google/api/http.proto @com_google_googleapis//google/api:http_proto",
    ],
    path = "go.etcd.io/etcd/api/v3",
)
use_repo(
    go_deps,
    "com_github_arielszekely_corral",
    "com_github_aws_aws_lambda_go",
    "com_github_aws_aws_sdk_go_v2",
    "com_github_aws_aws_sdk_go_v2_config",
    "com_github_aws_aws_sdk_go_v2_credentials",
    "com_github_aws_aws_sdk_go_v2_feature_s3_manager",
    "com_github_aws_aws_sdk_go_v2_service_s3",
    "com_github_docker_docker",
    "com_github_docker_go_connections",
    "com_github_docker_go_units",
    "com_github_dustin_go_humanize",
    "com_github_fmstephe_unsafeutil",
    "com_github_go_redis_redis_v8",
    "com_github_go_sql_driver_mysql",
    "com_github_google_btree",
    "com_github_hailocab_go_geoindex",
    "com_github_hanwen_go_fuse_v2",
    "com_github_harlow_go_micro_services",
    "com_github_hashicorp_golang_lru_v2",
    "com_github_mit_pdos_go_geoindex",
    "com_github_mitchellh_mapstructure",
    "com_github_montanaflynn_stats",
    "com_github_nfnt_resize",
    "com_github_nmac427_wasmer_go",
    "com_github_shirou_gopsutil",
    "com_github_stretchr_testify",
    "com_github_thanhpk_randstr",
    "in_gopkg_mgo_v2",
    "in_gopkg_yaml_v3",
    "io_etcd_go_etcd_client_v3",
    "io_opentelemetry_go_otel",
    "io_opentelemetry_go_otel_exporters_jaeger",
    "io_opentelemetry_go_otel_sdk",
    "io_opentelemetry_go_otel_trace",
    "org_golang_google_grpc",
    "org_golang_google_protobuf",
    "org_golang_x_exp",
    "org_golang_x_sys",
    "org_gonum_v1_gonum",
    "org_mongodb_go_mongo_driver",
)
