load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "benchmarks",
    srcs = [
        "results.go",
        "util.go",
    ],
    importpath = "sigmaos/benchmarks",
    visibility = ["//visibility:public"],
    deps = [
        "//debug",
        "//proc",
        "//sched/msched/clnt",
        "//sigmap",
        "//test",
        "@com_github_montanaflynn_stats//:stats",
        "@com_github_stretchr_testify//assert",
    ],
)

go_test(
    name = "benchmarks_test",
    srcs = [
        "benchmarks_test.go",
        "cached_backup_test.go",
        "cached_scaler_test.go",
        "cached_test.go",
        "cossim_test.go",
        "example_test.go",
        "helpers_test.go",
        "hotel_test.go",
        "http_test.go",
        "imgresize_test.go",
        "k8s_test.go",
        "lambda_test.go",
        "mr_test.go",
        "msched_test.go",
        "ops_test.go",
        "performance_test.go",
        "social_network_test.go",
    ],
    deps = [
        ":benchmarks",
        "//apps/cache",
        "//apps/cache/cachegrp/clnt",
        "//apps/cache/cachegrp/mgr",
        "//apps/cache/proto",
        "//apps/cache/srv",
        "//apps/cossim",
        "//apps/cossim/proto",
        "//apps/cossim/srv",
        "//apps/epcache/srv",
        "//apps/hotel",
        "//apps/imgresize",
        "//apps/mr",
        "//apps/socialnetwork",
        "//benchmarks/loadgen",
        "//debug",
        "//ft/procgroupmgr",
        "//ft/task",
        "//ft/task/clnt",
        "//proc",
        "//sched/msched/clnt",
        "//sched/msched/proc/chunk",
        "//serr",
        "//sigmaclnt",
        "//sigmaclnt/fslib/dirwatcher",
        "//sigmap",
        "//test",
        "//util/coordination/semaphore",
        "//util/k8s",
        "//util/linux/sched",
        "//util/perf",
        "//util/rand",
        "@com_github_stretchr_testify//assert",
        "@in_gopkg_mgo_v2//:mgo_v2",
        "@in_gopkg_mgo_v2//bson",
    ],
)
