load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "namesrv",
    srcs = [
        "dev.go",
        "dir.go",
        "file.go",
        "knamed.go",
        "leader.go",
        "leasesrv.go",
        "named.go",
        "obj.go",
    ],
    importpath = "sigmaos/namesrv",
    visibility = ["//visibility:public"],
    deps = [
        "//api/fs",
        "//debug",
        "//dialproxy/clnt",
        "//ft/lease/proto",
        "//namesrv/fsetcd",
        "//namesrv/leaderetcd",
        "//path",
        "//proc",
        "//rpc",
        "//serr",
        "//session/srv",
        "//sigmaclnt",
        "//sigmap",
        "//sigmasrv",
        "//sigmasrv/memfssrv/memfs/inode",
        "//spproto/srv",
        "//util/crash",
        "//util/perf",
        "//util/syncmap",
        "@io_etcd_go_etcd_client_v3//:client",
    ],
)
