load("@rules_go//go:def.bzl", "go_library", "go_test")

go_test(
    name = "path_test",
    srcs = ["path_test.go"],
    deps = [
        ":path",
        "//test",
        "@com_github_stretchr_testify//assert",
    ],
)

go_library(
    name = "path",
    srcs = ["path.go"],
    importpath = "sigmaos/path",
    visibility = ["//visibility:public"],
)
