load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "proc",
    srcs = [
        "dir.go",
        "env.go",
        "how.go",
        "proc.go",
        "seqno.go",
        "status.go",
    ],
    importpath = "sigmaos/proc",
    visibility = ["//visibility:public"],
    deps = [
        "//rpc/proto",
        "//serr",
        "//sigmap",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)
