load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "rpc",
    srcs = [
        "blob.go",
        "rpc.go",
        "stats.go",
    ],
    importpath = "sigmaos/rpc",
    visibility = ["//visibility:public"],
    deps = [
        "//rpc/proto",
        "//sigmasrv/stats",
        "//util/spstats",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//reflect/protoreflect",
    ],
)
