load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "sigmap",
    srcs = [
        "clntid.go",
        "const.go",
        "endpoint.go",
        "fence.go",
        "fid.go",
        "hyperparams.go",
        "lease.go",
        "mode.go",
        "named.go",
        "net.go",
        "path.go",
        "perm.go",
        "pid.go",
        "principal.go",
        "protomsg.go",
        "qid.go",
        "realm.go",
        "sigmap.go",
        "stat.go",
        "types.go",
    ],
    importpath = "sigmaos/sigmap",
    visibility = ["//visibility:public"],
    deps = [
        "//path",
        "//serr",
        "//session/proto",
        "//util/rand",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "sigmap_test",
    srcs = ["sigmap_test.go"],
    deps = [
        ":sigmap",
        "//test",
        "@com_github_stretchr_testify//assert",
    ],
)
