load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "sigmaos",
    srcs = ["sigmaos.go"],
    importpath = "sigmaos/api/sigmaos",
    visibility = ["//visibility:public"],
    deps = [
        "//path",
        "//session/proto",
        "//sigmap",
        "//util/spstats",
    ],
)
