load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "hotel",
    srcs = [
        "bench.go",
        "cache.go",
        "clnt.go",
        "geosrv.go",
        "job.go",
        "profsrv.go",
        "ratesrv.go",
        "recsrv.go",
        "reservesrv.go",
        "searchsrv.go",
        "usersrv.go",
        "wwwd.go",
    ],
    importpath = "sigmaos/apps/hotel",
    visibility = ["//visibility:public"],
    deps = [
        "//api/fs",
        "//apps/cache",
        "//apps/cache/cachegrp/clnt",
        "//apps/cache/cachegrp/mgr",
        "//apps/cache/proto",
        "//apps/epcache",
        "//apps/epcache/clnt",
        "//apps/epcache/srv",
        "//apps/hotel/proto",
        "//debug",
        "//dialproxy/clnt",
        "//proc",
        "//proxy/db/clnt",
        "//rpc",
        "//rpc/clnt",
        "//rpc/clnt/sigmap",
        "//rpc/shardedsvc/clnt",
        "//sigmaclnt",
        "//sigmaclnt/fslib",
        "//sigmap",
        "//sigmasrv",
        "//util/perf",
        "//util/tracing",
        "@com_github_hailocab_go_geoindex//:go-geoindex",
        "@com_github_harlow_go_micro_services//data",
        "@com_github_mit_pdos_go_geoindex//:go-geoindex",
        "@com_github_stretchr_testify//assert",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "hotel_test",
    srcs = ["hotel_test.go"],
    deps = [
        ":hotel",
        "//apps/epcache",
        "//apps/hotel/proto",
        "//benchmarks",
        "//benchmarks/loadgen",
        "//debug",
        "//path",
        "//proc",
        "//proxy/db/clnt",
        "//rpc",
        "//rpc/clnt/sigmap",
        "//rpc/shardedsvc/clnt",
        "//sigmap",
        "//test",
        "//util/linux/sched",
        "//util/perf",
        "//util/rand",
        "@com_github_stretchr_testify//assert",
    ],
)
