load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "mr",
    srcs = [
        "bench.go",
        "coord.go",
        "job.go",
        "mapper.go",
        "marshal.go",
        "mr.go",
        "reducer.go",
    ],
    importpath = "sigmaos/apps/mr",
    visibility = ["//visibility:public"],
    deps = [
        "//apps/mr/chunkreader",
        "//apps/mr/kvmap",
        "//apps/mr/mr",
        "//debug",
        "//ft/leaderclnt",
        "//ft/procgroupmgr",
        "//ft/task",
        "//ft/task/clnt",
        "//ft/task/fttaskmgr",
        "//ft/task/srv",
        "//proc",
        "//serr",
        "//sigmaclnt",
        "//sigmaclnt/fslib",
        "//sigmap",
        "//test",
        "//util/coordination/semaphore",
        "//util/crash",
        "//util/perf",
        "//util/rand",
        "//util/spstats",
        "//util/yaml",
        "@com_github_dustin_go_humanize//:go-humanize",
        "@com_github_mitchellh_mapstructure//:mapstructure",
    ],
)

go_test(
    name = "mr_test",
    srcs = ["mr_test.go"],
    deps = [
        ":mr",
        "//apps/mr/chunkreader",
        "//apps/mr/grep",
        "//apps/mr/mr",
        "//apps/mr/scanner",
        "//apps/mr/wc",
        "//debug",
        "//ft/procgroupmgr",
        "//ft/task/clnt",
        "//proc",
        "//sched/msched/clnt",
        "//sigmaclnt",
        "//sigmap",
        "//test",
        "//util/auth",
        "//util/crash",
        "//util/perf",
        "//util/rand",
        "//util/spstats",
        "@com_github_dustin_go_humanize//:go-humanize",
        "@com_github_stretchr_testify//assert",
    ],
)
