load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "socialnetwork",
    srcs = [
        "clnt.go",
        "composesrv.go",
        "config.go",
        "frontendsrv.go",
        "graphsrv.go",
        "homesrv.go",
        "mediasrv.go",
        "postsrv.go",
        "textsrv.go",
        "timelinesrv.go",
        "urlsrv.go",
        "usersrv.go",
        "util.go",
    ],
    importpath = "sigmaos/apps/socialnetwork",
    visibility = ["//visibility:public"],
    deps = [
        "//api/fs",
        "//apps/cache",
        "//apps/cache/cachegrp/clnt",
        "//apps/cache/cachegrp/mgr",
        "//apps/socialnetwork/proto",
        "//debug",
        "//dialproxy/clnt",
        "//proc",
        "//proxy/mongo/clnt",
        "//rpc/clnt",
        "//rpc/clnt/sigmap",
        "//sigmaclnt",
        "//sigmaclnt/fslib",
        "//sigmap",
        "//sigmasrv",
        "//util/perf",
        "//util/tracing",
        "@com_github_montanaflynn_stats//:stats",
        "@in_gopkg_mgo_v2//bson",
    ],
)

go_test(
    name = "socialnetwork_test",
    srcs = [
        "t_base_test.go",
        "t_benchmark_test.go",
        "t_compose_text_test.go",
        "t_media_post_test.go",
        "t_timeline_test.go",
        "t_user_graph_test.go",
    ],
    deps = [
        ":socialnetwork",
        "//apps/socialnetwork/proto",
        "//benchmarks/loadgen",
        "//debug",
        "//proc",
        "//rpc/clnt",
        "//rpc/clnt/sigmap",
        "//sigmap",
        "//test",
        "//util/linux/sched",
        "//util/rand",
        "@com_github_stretchr_testify//assert",
        "@in_gopkg_mgo_v2//:mgo_v2",
        "@in_gopkg_mgo_v2//bson",
    ],
)
