load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "netperf",
    srcs = [
        "clnt.go",
        "netperf.go",
        "srv.go",
    ],
    importpath = "sigmaos/benchmarks/netperf",
    visibility = ["//visibility:public"],
    deps = [
        "//debug",
        "//dialproxy/clnt",
        "//proc",
        "//sigmaclnt",
        "//sigmap",
        "@com_github_montanaflynn_stats//:stats",
    ],
)

go_test(
    name = "netperf_test",
    srcs = [
        "netperf_test.go",
        "tcp_test.go",
    ],
    deps = [
        ":netperf",
        "//debug",
        "//proc",
        "//sigmap",
        "//test",
        "@com_github_montanaflynn_stats//:stats",
        "@com_github_stretchr_testify//assert",
    ],
)
